refactor:  fix build dependency with api project